# FrancoisGingras_master

./: README.md
TaskSystem/: .cproject  .gitignore  .project  BUILD.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.txt  TaskTest.c
TaskSystem/BarMsg/: BarMsg.c
TaskSystem/BazTask/: BazTask.c  BazTask.h
TaskSystem/ConsumerTask/: ConsumerTask.c  generated.h
TaskSystem/DirectMissReceiveTask/: DirectMissReceiveTask.c  DirectMissReceiveTask.h  generated.h
TaskSystem/DirectMissSendTask/: DirectMissSendTask.c
TaskSystem/DirectReceiveTask/: DirectReceiveTask.c  DirectReceiveTask.h  generated.h
TaskSystem/DirectSendTask/: DirectSendTask.c  DirectSendTask.h  generated.h
TaskSystem/FooTask/: FooTask.c  FooTask.h  generated.h
TaskSystem/LoopReceiveTask/: LoopReceiveTask.c
TaskSystem/LoopSendTask/: LoopSendTask.c
TaskSystem/Message/: Message.h
TaskSystem/MsgQueue/: MsgQ.c  MsgQ.h  UnboundedMsgQ.c  UnboundedMsgQ.h
TaskSystem/PapaTask/: PapaTask.c  PapaTask.h  generated.h
TaskSystem/ProduceMsg/: ProduceMsg.c  ProduceMsg.h  generated.h
TaskSystem/ProducerTask/: ProducerTask.c  generated.h
TaskSystem/System/: System.c  System.h
TaskSystem/Tests/: direct_miss_test.c  direct_receive_test.c  loop_task_test.c  producer_consumer_test.c  simple_task_test.c  system.c  system_test.c  test_util.h  unbounded_msgq_test.c
TaskSystem/TextMsg/: TextMsg.c  generated.h
TaskSystem/include/TaskSystem/: CircularMsgQ.h  System.h  SystemGenerated.h  TimeHelper.h  UnboundedMsgQ.h  fatal.h
TaskSystem/include/TaskSystem/Messages/: Message.h
TaskSystem/include/TaskSystem/Messages/BarMsg/: BarMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/DoneMsg/: DoneMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/IntArrayMsg/: IntArrayMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/RefIntArrayMsg/: RefIntArrayMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/RefTwoDimIntArrayMsg/: RefTwoDimIntArrayMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/RequestMsg/: RequestMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/ResponseMsg/: ResponseMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/TextMsg/: TextMsg.h  generated.h
TaskSystem/include/TaskSystem/Messages/TopologyMsg/: TopologyMsg.h  generated.h
TaskSystem/include/TaskSystem/Tasks/BazTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/BucketTask/: BucketTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/ClientTask/: ClientTask.h  SelectInfo.h  generated.h
TaskSystem/include/TaskSystem/Tasks/ConsumerTask/: ConsumerTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/DatabaseTask/: DatabaseTask.h  StudentInfo.h  generated.h
TaskSystem/include/TaskSystem/Tasks/DirectMissReceiveTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/DirectMissSendTask/: DirectMissSendTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/DirectReceiveTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/DirectSendTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/FooTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/LoopReceiveTask/: LoopReceiveTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/LoopSendTask/: LoopSendTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/PapaTask/: generated.h
TaskSystem/include/TaskSystem/Tasks/ProducerTask/: ProducerTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/SampleSortTask/: SampleSortTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/WeatherClientTask/: WeatherClientTask.h  generated.h
TaskSystem/include/TaskSystem/Tasks/WeatherStationTask/: WeatherStationTask.h  generated.h
TaskSystem/src/: CMakeLists.txt  TimeHelper.c
TaskSystem/src/Messages/BarMsg/: BarMsg.c
TaskSystem/src/Messages/DoneMsg/: DoneMsg.c
TaskSystem/src/Messages/IntArrayMsg/: IntArrayMsg.c
TaskSystem/src/Messages/ProduceMsg/: ProduceMsg.c
TaskSystem/src/Messages/RefIntArrayMsg/: RefIntArrayMsg.c
TaskSystem/src/Messages/RefTwoDimIntArrayMsg/: RefTwoDimIntArrayMsg.c
TaskSystem/src/Messages/RequestMsg/: RequestMsg.c
TaskSystem/src/Messages/ResponseMsg/: ResponseMsg.c
TaskSystem/src/Messages/TextMsg/: TextMsg.c
TaskSystem/src/Messages/TopologyMsg/: TopologyMsg.c
TaskSystem/src/MsgQueue/: CircularMsgQ.c  UnboundedMsgQ.c
TaskSystem/src/System/: System.c  SystemGenerated.c
TaskSystem/src/Tasks/BazTask/: BazTask.c
TaskSystem/src/Tasks/BucketTask/: BucketTask.c
TaskSystem/src/Tasks/ClientTask/: ClientTask.c
TaskSystem/src/Tasks/ConsumerTask/: ConsumerTask.c
TaskSystem/src/Tasks/DatabaseTask/: DatabaseTask.c
TaskSystem/src/Tasks/DirectMissReceiveTask/: DirectMissReceiveTask.c
TaskSystem/src/Tasks/DirectMissSendTask/: DirectMissSendTask.c
TaskSystem/src/Tasks/DirectReceiveTask/: DirectReceiveTask.c
TaskSystem/src/Tasks/DirectSendTask/: DirectSendTask.c
TaskSystem/src/Tasks/FooTask/: FooTask.c
TaskSystem/src/Tasks/LoopReceiveTask/: LoopReceiveTask.c
TaskSystem/src/Tasks/LoopSendTask/: LoopSendTask.c
TaskSystem/src/Tasks/PapaTask/: PapaTask.c
TaskSystem/src/Tasks/ProducerTask/: ProducerTask.c
TaskSystem/src/Tasks/SampleSortTask/: SampleSortTask.c
TaskSystem/src/Tasks/WeatherClientTask/: WeatherClientTask.c
TaskSystem/src/Tasks/WeatherStationTask/: WeatherStationTask.c
TaskSystem/test/: CMakeLists.txt  README.txt  circular_msgq_test.c  db_client_test.c  db_server_test.c  direct_miss_test.c  direct_receive_test.c  loop_task_test.c  producer_consumer_test.c  ref_intarray_test.c  samplesort_test.c  simple_task_test.c  system_test.c  unbounded_msgq_test.c  wt_client_test.c  wt_start_test.c
TaskSystem/test_data/: README.md  bug1.txt  n10.txt  n1000.txt  n10000.txt  n100000.txt  n50.txt  t1.txt  t2.txt  t3.txt
TaskSystem/tool/: db_run.sh  gen.c  histo.py  parse_timing.py  ss_timing.sh  timing_header.py  validate_result.py
clist/: list_test.c
exploration/: gen.sh
nano_benchmarking/: .gitignore  Readme  benchmark.py  makefile  plot.py
nanomsg_exploration/: .gitignore  nanomsg_exploration.sdf  nanomsg_exploration.sln
nodejs/: client.js  server.js  (+1 more)
(+107 files in other folders)
